all the styling and layout fixes. ReviewSubmitInformatioNRequirementsTable also uses Collapse, updated to use attributes instead of setting global style.

--- a/services/minespace-web/src/styles/components/Forms.scss
+++ b/services/minespace-web/src/styles/components/Forms.scss
@@ -13,6 +13,15 @@
     }
 }
 
+.ant-form-item-checkbox-required .ant-checkbox+span {
+    &::after {
+        content: "*";
+        font-family: $font-family;
+        color: $gov-red;
+    }
+
+}
+
 .label-subtitle {
     line-height: 24px;
 }
